# dotfiles

./: .chezmoiremove  .cspell.json  .cursorrules  .editorconfig  .gitignore  .hyprland-migration-summary.md  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  NEW_RICE_THEMES_IMPLEMENTATION_PLAN.md  PKGBUILD  PKGBUILD.dev  POLYBAR_REORGANIZATION_PLAN.md  README.md  REPOSITORY_ANALYSIS.md  SECURITY.md  TEMPLATE_PLAN.md  bashrc  compton.conf  dots  dots-backup  dots-scripts  index.html  install
home/dot_config/quickshell/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  shell.qml
home/dot_config/quickshell/assets/: wrap_term_launch.sh
home/dot_config/quickshell/assets/pam.d/: fprint  passwd
home/dot_config/quickshell/assets/shaders/: opacitymask.frag.qsb
home/dot_config/quickshell/components/: Anim.qml  CAnim.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  MaterialIcon.qml  PropertyRow.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledClippingRect.qml  StyledRect.qml  StyledText.qml
home/dot_config/quickshell/components/containers/: StyledFlickable.qml  StyledListView.qml  StyledWindow.qml
home/dot_config/quickshell/components/controls/: CircularIndicator.qml  CircularProgress.qml  CollapsibleSection.qml  CustomMouseArea.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  MenuItem.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledInputField.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  ToggleButton.qml  ToggleRow.qml  Tooltip.qml
home/dot_config/quickshell/components/effects/: ColouredIcon.qml  Colouriser.qml  Elevation.qml  InnerBorder.qml  OpacityMask.qml
home/dot_config/quickshell/components/filedialog/: CurrentItem.qml  DialogButtons.qml  FileDialog.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml  Sizes.qml
home/dot_config/quickshell/components/images/: CachingIconImage.qml  CachingImage.qml
home/dot_config/quickshell/components/misc/: CustomShortcut.qml  Ref.qml
home/dot_config/quickshell/components/widgets/: ExtraIndicator.qml
home/dot_config/quickshell/config/: Appearance.qml  AppearanceConfig.qml  BackgroundConfig.qml  BarConfig.qml  BorderConfig.qml  Config.qml  ControlCenterConfig.qml  DashboardConfig.qml  GeneralConfig.qml  LauncherConfig.qml  LockConfig.qml  NotifsConfig.qml  OsdConfig.qml  ServiceConfig.qml  SessionConfig.qml  SidebarConfig.qml  UserPaths.qml  UtilitiesConfig.qml  WInfoConfig.qml
home/dot_config/quickshell/extras/: CMakeLists.txt  version.cpp
home/dot_config/quickshell/modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml
home/dot_config/quickshell/modules/areapicker/: AreaPicker.qml  Picker.qml
home/dot_config/quickshell/modules/background/: Background.qml  DesktopClock.qml  Visualiser.qml  Wallpaper.qml
home/dot_config/quickshell/modules/bar/: Bar.qml  BarWrapper.qml
home/dot_config/quickshell/modules/controlcenter/: ControlCenter.qml  NavRail.qml  PaneRegistry.qml  Panes.qml  Session.qml  WindowFactory.qml  WindowTitle.qml
home/dot_config/quickshell/modules/dashboard/: Background.qml  Content.qml  Dash.qml  Media.qml  Performance.qml  Tabs.qml  Weather.qml  Workspaces.qml  Wrapper.qml
home/dot_config/quickshell/modules/drawers/: Backgrounds.qml  Border.qml  Drawers.qml  Exclusions.qml  Interactions.qml  Panels.qml
home/dot_config/quickshell/modules/launcher/: AppList.qml  Background.qml  Content.qml  ContentList.qml  RiceSelector.qml  WallpaperList.qml  Wrapper.qml
home/dot_config/quickshell/modules/lock/: Center.qml  Content.qml  Fetch.qml  InputField.qml  Lock.qml  LockSurface.qml  Media.qml  NotifDock.qml  NotifGroup.qml  Pam.qml  Resources.qml  (+1 more)
home/dot_config/quickshell/nix/: app2unit.nix  default.nix  hm-module.nix
home/dot_config/quickshell/plugin/: CMakeLists.txt
home/dot_config/quickshell/services/: Audio.qml  Brightness.qml  Colours.qml  GameMode.qml  Hypr.qml  IdleInhibitor.qml  Network.qml  NetworkUsage.qml  Nmcli.qml  Notifs.qml  Players.qml  Recorder.qml  Rice.qml  SystemUsage.qml  Time.qml  VPN.qml  Visibilities.qml  Wallpapers.qml  Weather.qml
home/dot_config/quickshell/utils/: Icons.qml  NetworkConnection.qml  Paths.qml  Searcher.qml  Strings.qml  SysInfo.qml
(+1173 files in other folders)
